--- a/components/footer.html
+++ b/components/footer.html
@@ -1,28 +1,29 @@
-<footer class="bg-[#262626] mt-[250px]">
+<div class="w-full relative bg-[#0061C2] mt-[100px] flex-jc-c py-8" style="background-image: url(img/footer-bg.png)">
   <div class="container">
-    <div class="w-full h-[360px] min-[500px]:h-[320px] relative transform translate-y-[-50%] bg-blue rounded-[12px]">
-      <img src="img/contact-me-bg.png" alt="contact-me-bg" class="w-full h-full object-cover  rounded-[16px]">
-      <img src="img/message-ilustriator.png" alt="message-illustrator"
-           class="absolute left-[2%] min-[1350px]:left-[10%] min-[1450px]:left-[17%] top-[-140px] min-[350px]:top-[-180px] min-[500px]:top-[-230px] min-[1256px]:top-[-100px] transform max-[500px]:!scale-50 max-[1240px]:!scale-75">
-      <div
-          class="absolute top-0 min-[890px]:top-[50%] max-[890px]:bottom-0 min-[890px]:right-[70px] transform min-[890px]:translate-y-[-50%] max-[576px]:pr-4 max-[576px]:pl-4 max-[890px]:pl-10 max-[431px]:pt-[50px] max-[890px]:pt-[100px]">
-        <h3 class="font-light max-[890px]:mb-2 max-[890px]:leading-[32px] text-[32px] min-[890px]:text-[64px] text-white">
-          Подпишись на рассылку</h3>
+    <div class="flex-js-s md:flex-jsb-c flex-col md:flex-row">
+      <h3 class="font-light text-[32px] lg:text-[44px] leading-[30px] md:leading-none text-white font-lena mb-5 md:mb-0">
+        Работаем с 2009 года
+      </h3>
+      <div class="w-full md:w-1/2">
         <p class="text-white">Получай наши новости, акции, советы и рекомендации экспертов</p>
         <form action="#" class="w-full flex-jsb-c max-[431px]:flex-col gap-4 mt-4">
           <label class="w-full h-[54px] bg-white overflow-hidden rounded-[8px]">
             <input type="text" placeholder="Ваша почта" class="w-full h-full pl-6">
           </label>
           <button
-              class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
+              class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2 max-[431px]:w-full">
             Подписаться
           </button>
         </form>
       </div>
     </div>
+  </div>
+</div>
 
 
-    <div class="w-full grid-cols-12 gap-10 mt-[-60px] hidden min-[850px]:grid">
+<footer class="bg-[#262626] pt-[91px]">
+  <div class="container">
+    <div class="w-full grid-cols-12 gap-10 hidden min-[850px]:grid">
       <div class="col-span-4 min-[1300px]:col-span-3">
         <img src="img/logo-footer.svg" alt="logo-footer" class="mt-[-20px]">
         <div class="flex-js-c gap-2 text-white mt-4">
