--- a/components/navbar.html
+++ b/components/navbar.html
@@ -115,7 +115,7 @@
     </a>
 
     <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
-      <div class="relative w-10 h-10 flex-jc-c">
+      <div class="relative w-10 h-10 flex-jc-c  max-[576px]:mt-[2px]">
         <img src="img/icons/shop.svg" alt="card-blue" width="26" height="26">
         <span class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
       </div>
