--- a/components/footer.html
+++ b/components/footer.html
@@ -21,7 +21,7 @@
 </div>
 
 
-<footer class="bg-[#262626] pt-[91px]">
+<footer class="bg-[#262626] pt-10 md:pt-[91px]">
   <div class="container">
     <div class="w-full grid-cols-12 gap-10 hidden min-[850px]:grid">
       <div class="col-span-4 min-[1300px]:col-span-3">
@@ -228,7 +228,7 @@
     </div>
 
 
-    <div class="w-full block min-[850px]:hidden mt-[-150px]">
+    <div class="w-full block min-[850px]:hidden">
 
       <div class="w-full flex-jsb-c border-b pb-6 border-white/20">
         <a href="home.html">
@@ -265,7 +265,7 @@
           </a>
         </li>
         <li>
-          <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+          <a href="#" class="text-white opacity-80 mb-2 flex-js-c text-nowrap">
             <img src="img/icons/login-account.svg" alt="login-account" class="mr-2">
             Регистрация и вход
           </a>
