--- a/components/navbar.html
+++ b/components/navbar.html
@@ -46,19 +46,21 @@
         </a>
 
         <button
-            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition min-w-[150px] flex min-[915px]:hidden">
+            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white
+             hover:bg-blue/80 transition min-w-[150px] flex min-[640px]:hidden">
           <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
           Каталог
         </button>
       </div>
 
-      <div class="flex-jsb-c gap-4 hidden min-[915px]:flex flex-grow">
+      <div class="flex-jsb-c gap-4 min-[640px]:flex flex-grow">
         <button
-            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition  min-w-[150px]">
+            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[640px]:flex-jsb-c gap-3 text-white
+             hover:bg-blue/80 transition min-w-[150px] flex max-[640px]:hidden">
           <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
           Каталог
         </button>
-        <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px]">
+        <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px] hidden min-[640px]:flex">
           <label class="w-full h-full bg-white rounded-[6px] overflow-hidden">
             <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none"
                    placeholder="Поиск по сайту">
