--- a/css/output.css
+++ b/css/output.css
@@ -70,6 +70,8 @@ a {
 .noUi-horizontal {
   height: 6px;
   border: none;
+  width: 96%;
+  margin-left: 2%;
 }
 
 .noUi-connect {
@@ -81,7 +83,7 @@ a {
   height: 24px;
   border-radius: 50%;
   top: -9px;
-  right: -13px;
+  right: -17px;
   border: 4px solid #fff;
   background: #009FFF;
   cursor: pointer;
@@ -1376,6 +1378,10 @@ select{
   right: 140px;
 }
 
+.right-\[15px\]{
+  right: 15px;
+}
+
 .right-\[40px\]{
   right: 40px;
 }
@@ -1422,6 +1428,10 @@ select{
 
 .top-\[112px\]{
   top: 112px;
+}
+
+.top-\[15px\]{
+  top: 15px;
 }
 
 .top-\[7px\]{
@@ -1891,6 +1901,10 @@ select{
 
 .mt-\[20px\]{
   margin-top: 20px;
+}
+
+.mt-\[24px\]{
+  margin-top: 24px;
 }
 
 .mt-\[2px\]{
@@ -2755,6 +2769,10 @@ select{
   gap: 138px;
 }
 
+.gap-\[16px\]{
+  gap: 16px;
+}
+
 .gap-\[20px\]{
   gap: 20px;
 }
@@ -3378,6 +3396,11 @@ select{
   padding-right: 32px;
 }
 
+.px-\[44px\]{
+  padding-left: 44px;
+  padding-right: 44px;
+}
+
 .px-\[6px\]{
   padding-left: 6px;
   padding-right: 6px;
@@ -3558,6 +3581,10 @@ select{
 
 .pr-\[30px\]{
   padding-right: 30px;
+}
+
+.pr-\[40px\]{
+  padding-right: 40px;
 }
 
 .pt-10{
@@ -4274,6 +4301,14 @@ select{
     margin-right: 0;
   }
 
+  .max-\[1400px\]\:mt-\[20px\]{
+    margin-top: 20px;
+  }
+
+  .max-\[1400px\]\:block{
+    display: block;
+  }
+
   .max-\[1400px\]\:flex{
     display: flex;
   }
@@ -4368,6 +4403,10 @@ select{
 
   .max-\[1024px\]\:mb-\[-36px\]{
     margin-bottom: -36px;
+  }
+
+  .max-\[1024px\]\:mb-\[10px\]{
+    margin-bottom: 10px;
   }
 
   .max-\[1024px\]\:mb-\[24px\]{
@@ -4522,6 +4561,10 @@ select{
     left: 0;
   }
 
+  .max-\[767px\]\:bottom-\[-30px\]{
+    bottom: -30px;
+  }
+
   .max-\[767px\]\:col-span-12{
     grid-column: span 12 / span 12;
   }
@@ -4584,8 +4627,16 @@ select{
     margin-top: 30px;
   }
 
+  .max-\[767px\]\:mt-\[40px\]{
+    margin-top: 40px;
+  }
+
   .max-\[767px\]\:block{
     display: block;
+  }
+
+  .max-\[767px\]\:grid{
+    display: grid;
   }
 
   .max-\[767px\]\:h-\[290px\]{
@@ -4596,8 +4647,20 @@ select{
     height: 65vw;
   }
 
+  .max-\[767px\]\:h-\[180px\]{
+    height: 180px;
+  }
+
   .max-\[767px\]\:min-h-\[490px\]{
     min-height: 490px;
+  }
+
+  .max-\[767px\]\:w-\[310px\]{
+    width: 310px;
+  }
+
+  .max-\[767px\]\:w-\[46\%\]{
+    width: 46%;
   }
 
   .max-\[767px\]\:w-\[49\%\]{
@@ -4801,6 +4864,12 @@ select{
 
   .max-\[650px\]\:gap-\[12px\]{
     gap: 12px;
+  }
+}
+
+@media (max-width: 640px){
+  .max-\[640px\]\:hidden{
+    display: none;
   }
 }
 
@@ -5011,6 +5080,14 @@ select{
 
   .sm\:text-\[44px\]{
     font-size: 44px;
+  }
+
+  .min-\[640px\]\:flex{
+    display: flex;
+  }
+
+  .min-\[640px\]\:hidden{
+    display: none;
   }
 }
 
