--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@ a {
 .noUi-horizontal {
   height: 6px;
   border: none;
+  width: 96%;
+  margin-left: 2%;
 }
 
 .noUi-connect {
@@ -73,7 +75,7 @@ a {
   height: 24px;
   border-radius: 50%;
   top: -9px;
-  right: -13px;
+  right: -17px;
   border: 4px solid #fff;
   background: #009FFF;
   cursor: pointer;
