--- a/css/style.scss
+++ b/css/style.scss
@@ -86,6 +86,8 @@ a {
 .noUi-horizontal{
   height: 6px;
   border: none;
+  width: 96%;
+  margin-left: 2%;
 }
 
 .noUi-connect{
@@ -97,7 +99,7 @@ a {
   height: 24px;
   border-radius: 50%;
   top: -9px;
-  right: -13px;
+  right: -17px;
   border: 4px solid #fff;
   background: #009FFF;
   cursor: pointer;
