--- a/css/output.css
+++ b/css/output.css
@@ -3036,6 +3036,10 @@ select{
   border-color: rgb(255 255 255 / 0.2);
 }
 
+.border-transparent{
+  border-color: transparent;
+}
+
 .border-r-\[\#D7DBDF\]{
   --tw-border-opacity: 1;
   border-right-color: rgb(215 219 223 / var(--tw-border-opacity, 1));
@@ -4054,13 +4058,13 @@ select{
   content: var(--tw-content);
 }
 
+.hover\:border:hover{
+  border-width: 1px;
+}
+
 .hover\:border-\[\#009FFF\]:hover{
   --tw-border-opacity: 1;
   border-color: rgb(0 159 255 / var(--tw-border-opacity, 1));
-}
-
-.hover\:border-\[rgba\(110\2c 110\2c 110\2c 0\.75\)\]:hover{
-  border-color: rgba(110,110,110,0.75);
 }
 
 .hover\:border-black:hover{
@@ -4130,6 +4134,16 @@ select{
   background-color: rgb(255 255 255 / 0.8);
 }
 
+.hover\:bg-white:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:\!bg-white:hover{
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1)) !important;
+}
+
 .hover\:text-\[\#009FFF\]:hover{
   --tw-text-opacity: 1;
   color: rgb(0 159 255 / var(--tw-text-opacity, 1));
@@ -4143,6 +4157,11 @@ select{
 .hover\:text-blue:hover{
   --tw-text-opacity: 1;
   color: rgb(0 159 255 / var(--tw-text-opacity, 1));
+}
+
+.hover\:\!text-blue:hover{
+  --tw-text-opacity: 1 !important;
+  color: rgb(0 159 255 / var(--tw-text-opacity, 1)) !important;
 }
 
 .hover\:opacity-100:hover{
@@ -4553,16 +4572,16 @@ select{
     position: relative;
   }
 
+  .max-\[767px\]\:bottom-\[-30px\]{
+    bottom: -30px;
+  }
+
   .max-\[767px\]\:bottom-\[10px\]{
     bottom: 10px;
   }
 
   .max-\[767px\]\:left-\[0\]{
     left: 0;
-  }
-
-  .max-\[767px\]\:bottom-\[-30px\]{
-    bottom: -30px;
   }
 
   .max-\[767px\]\:col-span-12{
@@ -4639,16 +4658,16 @@ select{
     display: grid;
   }
 
+  .max-\[767px\]\:h-\[180px\]{
+    height: 180px;
+  }
+
   .max-\[767px\]\:h-\[290px\]{
     height: 290px;
   }
 
   .max-\[767px\]\:h-\[65vw\]{
     height: 65vw;
-  }
-
-  .max-\[767px\]\:h-\[180px\]{
-    height: 180px;
   }
 
   .max-\[767px\]\:min-h-\[490px\]{
